fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ i.fa {
 .detail-address h2 {
     text-align: center;
     font-family: 'Lato', sans-serif;
-    font-size: calc(1.2rem + 1vw);
+    font-size: calc(0.8rem + 1vw);
     font-weight: 400;
     letter-spacing: 3px;
     line-height: 60px;
@@ -251,7 +251,7 @@ i.fa {
     font-weight: 300;
     line-height: 40px;
     letter-spacing: 1px;
-    font-size: calc(0.35rem + 1vw);
+    font-size: calc(0.3rem + 1vw);
     padding: 50px;
     margin: auto;
 }
